--- a/www/style.css
+++ b/www/style.css
@@ -1,6 +1,6 @@
 /**********************************************************************/
-/*  PROYECTO PIANO               */
-/*  EQUIPO MEINE                  */
+/*  PROYECTO PIANO */
+/*  EQUIPO SUECIA*/
 
 * {
   box-sizing: border-box;
