--- a/www/style.css
+++ b/www/style.css
@@ -7,7 +7,7 @@
   margin: 0;
   padding: 0;
 
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 
 :root {
@@ -92,6 +92,7 @@ body {
   display: flex;
   flex-direction: column;
   grid-area: area2;
+  /*  */
   position: relative;
 
   gap: 7px;
